|
Quick Lists
|
|
Bug ID:
|
6744422
|
|
Votes
|
0
|
|
Synopsis
|
incorrect handling of -1 in set_jump_destination
|
|
Category
|
hotspot:compiler2
|
|
Reported Against
|
|
|
Release Fixed
|
hs14(b04)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
3-Medium
|
|
Related Bugs
|
5108146
|
|
Submit Date
|
03-SEP-2008
|
|
Description
|
The fix for 5108146 unified the handling jumps which are set to -1 but part of the logic from 64 bit was lost in the merge, resulting in incorrect jump destinations for clean ICs.
Posted Date : 2008-09-03 21:17:56.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
oops.
Posted Date : 2008-09-03 21:17:56.0
http://hg.openjdk.java.net/jdk7/hotspot/hotspot/rev/3a26e9e4be71
Posted Date : 2008-09-04 01:15:20.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |