6744422: incorrect handling of -1 in set_jump_destination

Reviewed-by: rasbold